reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_468_col_9_001.log

*** crates/tracewake-core/src/epistemics/projection.rs:468:9: replace EpistemicProjection::beliefs_for_context -> Vec<&Belief> with vec![Box::leak(Box::new(Default::default()))]

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace EpistemicProjection::beliefs_for_context -> Vec<&Belief> with vec![Box::leak(Box::new(Default::default()))]
@@ -460,31 +460,17 @@
             .into_iter()
             .flat_map(|ids| ids.iter())
             .filter_map(|id| self.observations_by_id.get(id))
             .filter(|observation| context.permits_scope(observation.privacy_scope()))
             .collect()
     }
 
     pub fn beliefs_for_context(&self, context: &KnowledgeContext) -> Vec<&Belief> {
-        match context.mode() {
-            ViewMode::Debug => self
-                .beliefs_by_id
-                .values()
-                .filter(|belief| context.permits_scope(belief.privacy_scope()))
-                .collect(),
-            ViewMode::Embodied => self
-                .beliefs_by_holder
-                .get(context.viewer_actor_id())
-                .into_iter()
-                .flat_map(|ids| ids.iter())
-                .filter_map(|id| self.beliefs_by_id.get(id))
-                .filter(|belief| context.permits_scope(belief.privacy_scope()))
-                .collect(),
-        }
+        vec![Box::leak(Box::new(Default::default()))] /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn contradictions_for_context(&self, context: &KnowledgeContext) -> Vec<&Contradiction> {
         match context.mode() {
             ViewMode::Debug => self.contradictions_by_id.values().collect(),
             ViewMode::Embodied => self
                 .contradictions_by_holder
                 .get(context.viewer_actor_id())


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/projection.rs` has changed (1781909389.611924891s, 5s after last build at 1781909384.631924896s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `Belief: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/projection.rs:468:33
    |
468 |         vec![Box::leak(Box::new(Default::default()))] /* ~ changed by cargo-mutants ~ */
    |                                 ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Belief`
   --> crates/tracewake-core/src/epistemics/belief.rs:40:1
    |
 40 | pub struct Belief {
    | ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `belief::Belief: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/projection.rs:468:33
    |
468 |         vec![Box::leak(Box::new(Default::default()))] /* ~ changed by cargo-mutants ~ */
    |                                 ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `belief::Belief`
   --> crates/tracewake-core/src/epistemics/belief.rs:40:1
    |
 40 | pub struct Belief {
    | ^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
